# cargo-geiger

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  azure-pipelines.yml  matrix.json  run-docker  rust-toolchain
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: cache-zigs.yml  ci.yml  deploy.yml  docker-build.yml  release.yml  rust-audit-check.yml  rustfmt.yml
cargo-geiger/: .gitignore  Cargo.toml
cargo-geiger-serde/: Cargo.toml  LICENSE-MIT  README.md
cargo-geiger-serde/src/: lib.rs  package_id.rs  report.rs  source.rs
cargo-geiger/src/: args.rs  cli.rs  find.rs  format.rs  graph.rs  krates_utils.rs  lib.rs  main.rs  mapping.rs  readme.rs  report.rs  rs_file.rs  runners.rs  scan.rs  traversal.rs  tree.rs  utils.rs
cargo-geiger/src/format/: display.rs  emoji_symbols.rs  mod.rs  parse.rs  pattern.rs  print.rs  print_config.rs  table.rs  tree.rs
cargo-geiger/src/format/table/: handle_text_tree_line.rs  total_package_counts.rs
cargo-geiger/src/graph/: extra_deps.rs
cargo-geiger/src/mapping/: core.rs  geiger.rs  krates.rs  krates_mapping.rs  metadata.rs
cargo-geiger/src/mapping/metadata/: dependency.rs  package.rs  package_id.rs
cargo-geiger/src/rs_file/: custom_executor.rs
cargo-geiger/src/runners/: cargo.rs
cargo-geiger/src/scan/: default.rs  find.rs  forbid.rs  report.rs  rs_file.rs
cargo-geiger/src/scan/default/: table.rs
cargo-geiger/src/scan/forbid/: table.rs
cargo-geiger/src/scan/rs_file/: custom_executor.rs
cargo-geiger/src/tree/: traversal.rs
cargo-geiger/src/tree/traversal/: dependency_kind.rs  dependency_node.rs
cargo-geiger/src/utils/: core.rs  krates.rs  metadata.rs
cargo-geiger/tests/: integration_tests.rs  mod.rs  readme_integration_tests.rs  serialize_integration_tests.rs
cargo-geiger/tests/context/: mod.rs
cargo-geiger/tests/external_package_reports/: mod.rs
cargo-geiger/tests/integration_test/: mod.rs
cargo-geiger/tests/report/: mod.rs
cargo-geiger/tests/run/: mod.rs
cargo-geiger/tests/snapshots/: integration_tests__test1_package_with_no_deps.stderr.snap  integration_tests__test1_package_with_no_deps.stdout.snap  integration_tests__test2_package_with_shallow_deps.stderr.snap  integration_tests__test2_package_with_shallow_deps.stdout.snap  integration_tests__test3_package_with_nested_deps.stderr.snap  integration_tests__test3_package_with_nested_deps.stdout.snap  integration_tests__test4_workspace_with_top_level_package.stdout.snap  integration_tests__test6_cargo_lock_out_of_date.stdout.snap  integration_tests__test7_package_with_patched_dep.stderr.snap  integration_tests__test7_package_with_patched_dep.stdout.snap  integration_tests__test8_package_with_build_rs_no_deps.stderr.snap  integration_tests__test8_package_with_build_rs_no_deps.stdout.snap  integration_tests__test9_package_with_git_deps.stderr.snap  integration_tests__test9_package_with_git_deps.stdout.snap  mod__test1_package_with_no_deps.stdout.snap  mod__test2_package_with_shallow_deps.stdout.snap  mod__test3_package_with_nested_deps.stdout.snap  mod__test4_workspace_with_top_level_package.stdout.snap  mod__test5_workspace_with_virtual_manifest.stderr.snap  mod__test5_workspace_with_virtual_manifest.stdout.snap  mod__test6_cargo_lock_out_of_date.stdout.snap  mod__test7_package_with_patched_dep.stdout.snap  r#mod__test2_package_with_shallow_deps.stdout.snap  r#mod__test4_workspace_with_top_level_package.stdout.snap  r#mod__test5_workspace_with_virtual_manifest.stderr.snap  r#mod__test5_workspace_with_virtual_manifest.stdout.snap  readme_integration_tests__test1_package_with_no_deps.readme.snap  readme_integration_tests__test2_package_with_shallow_deps.readme.snap  readme_integration_tests__test3_package_with_nested_deps.readme.snap  readme_integration_tests__test4_workspace_with_top_level_package.readme.snap  readme_integration_tests__test6_cargo_lock_out_of_date.readme.snap  readme_integration_tests__test7_package_with_patched_dep.readme.snap
geiger/: Cargo.toml  LICENSE-MIT  README.md
geiger/src/: find.rs  geiger_syn_visitor.rs  lib.rs
src/: lib.rs  main-old.rs  main.rs  unsafe_finder.rs
src/format/: mod.rs  parse.rs
test_crates/support/num_cpus/: Cargo.toml
test_crates/support/num_cpus/src/: lib.rs
test_crates/test1_package_with_no_deps/: Cargo.toml
test_crates/test1_package_with_no_deps/src/: lib.rs
test_crates/test2_package_with_shallow_deps/: Cargo.toml
test_crates/test2_package_with_shallow_deps/src/: lib.rs
test_crates/test3_package_with_nested_deps/: Cargo.toml  README.md
test_crates/test3_package_with_nested_deps/src/: main.rs
test_crates/test4_workspace_with_top_level_package/: Cargo.toml  README.md
test_crates/test4_workspace_with_top_level_package/member1/: Cargo.toml
test_crates/test4_workspace_with_top_level_package/member1/src/: main.rs
test_crates/test5_workspace_with_virtual_manifest/: Cargo.toml
test_crates/test6_cargo_lock_out_of_date/: Cargo.toml
test_crates/test6_cargo_lock_out_of_date/src/: main.rs
test_crates/test7_package_with_patched_dep/: Cargo.toml
test_crates/test8_package_with_build_rs_no_deps/: Cargo.toml  build.rs
test_crates/test8_package_with_build_rs_no_deps/src/: lib.rs
test_crates/test9_package_with_git_deps/: Cargo.toml
