[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["development-tools", "serialization"]
description = "TODO: Write description"
edition = "2018"
license = "Apache-2.0/MIT"
keywords = ["unsafe"]
name = "cargo-geiger-serde"
repository = "https://github.com/rust-secure-code/cargo-geiger"
version = "0.2.4"

[dependencies]
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.132", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
