[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "parsing"]
description = "Detects usage of unsafe Rust in a Rust crate and its dependencies."
edition = "2018"
keywords = ["unsafe", "cargo", "plugin"]
license = "Apache-2.0/MIT"
name = "cargo-geiger"
readme = "README.md"
repository = "https://github.com/rust-secure-code/cargo-geiger"
version = "0.11.4"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.60"
cargo = "0.63.0"
cargo-geiger-serde = { path = "../cargo-geiger-serde", version = "0.2.3" }
cargo_metadata = "0.15.0"
cargo-platform = "0.1.2"
colored = "2.0.0"
console = "0.15.1"
geiger = { path = "../geiger", version = "0.4.10" }
krates = "0.11.0"
petgraph = "0.6.2"
pico-args = "0.5.0"
rayon = "1.5.3"
regex = "1.6.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.83"
strum = "0.24.1"
strum_macros = "0.24.2"
walkdir = "2.3.2"
url = "2.2.1"
cargo-util = "0.2.0"

[features]
vendored-openssl = ["cargo/vendored-openssl"]

[dev-dependencies]
assert_cmd = "2.0.4"
better-panic = "0.3.0"
fs_extra = "1.2.0"
insta = "1.17.1"
rand = "0.8.5"
regex = "1.6.0"
rstest = "0.15.0"
semver = "1.0.13"
tempfile = "3.3.0"
