[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "parsing"]
description = "Detects usage of unsafe Rust in a Rust crate and its dependencies."
edition = "2018"
keywords = ["unsafe", "cargo", "plugin"]
license = "Apache-2.0/MIT"
name = "cargo-geiger"
readme = "README.md"
repository = "https://github.com/rust-secure-code/cargo-geiger"
version = "0.11.7"

[badges]
maintenance = { status = "experimental" }

[dependencies]
anyhow = "1.0.97"
cargo = "0.86.0"
cargo-geiger-serde = { path = "../cargo-geiger-serde", version = "0.2.5" }
cargo-platform = "0.1.9"
colored = "2.0.0"
console = "0.15.11"
geiger = { path = "../geiger", version = "0.4.12" }
krates = { version = "0.18.1", features = ["metadata"] }
petgraph = "0.7.1"
pico-args = "0.5.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
walkdir = "2.5.0"
url = "2.5.4"
cargo-util = "0.2.18"

[features]
vendored-openssl = ["cargo/vendored-openssl"]

[dev-dependencies]
assert_cmd = "2.0.10"
better-panic = "0.3.0"
fs_extra = "1.3.0"
insta = "1.28.0"
rand = "0.8.5"
regex = "1.7.3"
rstest = "0.18.2"
semver = "1.0.17"
tempfile = "3.4.0"
