[package]
authors = ["anderejd <rajder@gmail.com>"]
categories = ["development-tools", "parsing"]
description = "Some library parts of cargo-geiger, decoupled from cargo."
edition = "2018"
keywords = ["unsafe"]
license = "Apache-2.0/MIT"
name = "geiger"
readme = "README.md"
repository = "https://github.com/rust-secure-code/cargo-geiger"
version = "0.4.8"

[badges]
maintenance = { status = "experimental" }

[dependencies]
cargo-geiger-serde = { path = "../cargo-geiger-serde", version = "0.2.1" }
syn = { version = "1.0.89", features = ["parsing", "printing", "clone-impls", "full", "extra-traits", "visit"] }
proc-macro2 = "1.0.36"

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.3.0"
